[metadata]
name = livyc
version = 0.0.2
author = Ramses Alexander Coraspe Valdez
author_email = contacto@wittline.com
description = Apache Livy Client with PySpark
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wittline/livyc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False